# nycohm

./: README.md  pyproject.toml  workspace.yaml
data/: Affordable_Housing_Production_by_Building_20250731.csv  community_to_council.csv  community_to_school.csv  council_to_school.csv
data/crosswalk/: community_to_tract.csv  council_to_tract.csv
data/csv/: Enrollment_Capacity_And_Utilization_Reports_20250731.csv
data/shapefiles/nycc/: nycc.shp.xml
data/shapefiles/nycd/: nycd.dbf  nycd.shp  nycd.shp.xml  nycd.shx
data/shapefiles/nyct/: nyct2020.dbf  nyct2020.shp  nyct2020.shp.xml  nyct2020.shx
data/shapefiles/nysd/: NYC_School_Districts.dbf  NYC_School_Districts.shp  NYC_School_Districts.shx
data/standardized/: Affordable_Housing_Production_by_Building_standardized.csv  Enrollment_Capacity_And_Utilization_Reports_standardized.csv  aggregated_housing_data.csv  community_to_council_standardized.csv  community_to_school_standardized.csv  community_to_tract_standardized.csv  council_to_school_standardized.csv  council_to_tract_standardized.csv
docs/: web_sources.md
src/: definitions.py
src/nycohm/: __init__.py  assets.py  crosswalk.py  dagster_pipeline.py  definitions.py  helpers.py
src/nycohm/deprecated/: helpers.py  join.py  standardize_keys.py
src/nycohm/helpers/: __init__.py  check_data.py  connect_bq.py  load_bq.py  log_config.py  process_datasets.py
