[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nycohm"
version = "0.1.0"
description = "NYC Open Housing Metrics package"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dagster",
    "dagster-webserver",
    "pandas",
    "google-cloud-bigquery",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.dagster]
module_name = "nycohm.definitions"
attribute = "defs"